# DD2-Helper

./: .gitignore  CMakeLists.txt  README  README.md  resource.qrc  user.json
include/: App.hpp  CustomButtons.hpp  HandleGuard.hpp  HotKeyEdit.hpp  HotKeySequence.hpp  JsonFileWatcher.hpp  KeySequence.hpp  KeyStates.hpp  KeyboardInput.hpp  MouseInput.hpp  Network.hpp  Player.hpp  PlayerWidget.hpp  Popup.hpp  Process.hpp  ThemeToggle.hpp  UserConfig.hpp  Utils.hpp  VKeys.hpp  Window.hpp  mainwindow.h
include/Commands/: AutoReady.hpp  DropAbilityMana.hpp  DropBuildResource.hpp  DropGreenMana.hpp  ICommand.hpp  InitiateBuff.hpp  SendHotkey.hpp  SendInputCommand.hpp
resources/app_styles/: dark_theme.qss  light_theme.qss
resources/user/: user.json
src/: App.cpp  CustomButtons.cpp  HotKeyEdit.cpp  HotKeySequence.cpp  JsonFileWatcher.cpp  KeySequence.cpp  KeyboardInput.cpp  MouseInput.cpp  Network.cpp  Player.cpp  PlayerWidget.cpp  Popup.cpp  Process.cpp  ThemeToggle.cpp  UserConfig.cpp  Utils.cpp  Window.cpp  main.cpp  mainwindow.cpp
src/Commands/: AutoReady.cpp  DropAbilityMana.cpp  DropBuildResource.cpp  DropGreenMana.cpp  InitiateBuff.cpp  SendHotkey.cpp  SendInputCommand.cpp
ui/: mainwindow.ui
